# fantasynames

./: .flake8  .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
docs/: new-generator-guide.md  transformation-guide.md
fantasynames/: __init__.py  all_languages.py  anglo.py  consts.py  data.py  drow.py  dwarf.py  elf.py  french.py  gender.py  helpers.py  hobbit.py  human_diverse.py  language.py  orc.py  random_language.py
fantasynames/languages/: anglo.py  dwarf.py  elf.py  french.py  hobbit.py  human_diverse.py  language.py  language_diverse.py
fantasynames/tests/: language_test.py  special_rules_test.py
names/: __init__.py  anglo.py  data.py  dwarf.py  elf.py  french.py  hobbit.py  human_diverse.py  main.py
random_fantasy_names/: __init__.py  data.py  helpers.py  main.py
