[tool.poetry]
name = "fantasynames"
version = "0.1.2"
description="A fantasy themed random name generator."
authors = ["Jessica Peck <jessypeck@gmail.com>"]
homepage = "https://github.com/jessypeck/fantasynames"
repository = "https://github.com/jessypeck/fantasynames"
readme = "README.md"

[tool.poetry.dependencies]


[tool.poetry.dev-dependencies]
python = "^3.7"
black = "^20.8b1"
flake8 = "^3.9.0"
mypy = "^0.812"
pytest = "^7.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
